cmake_minimum_required(VERSION 3.24)
project(Lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab2
        .idea/.gitignore
        .idea/Lab2.iml
        .idea/modules.xml
        .idea/workspace.xml
        main.cpp Collection.h Collection.cpp Tranzactie.h Tranzactie.cpp ATM.cpp RepositoryCollection.cpp VectorDinamic.h VectorDinamic.cpp Node.h List.h TestList.h TestList.cpp)
